basic navigation features

--- a/Fetching quote/index.html
+++ b/Fetching quote/index.html
@@ -10,7 +10,13 @@
   <body>
     <main class="main-container">
         <!-- navigation -->
-      <nav class="navigation"></nav>
+      <nav class="navigation">
+        <ul class="main-navs">
+          <li class="active" >Home</li>
+          <li>Saved quote</li>
+          <li>My quotes</li>
+        </ul>
+      </nav>
       
       <!-- display section -->
       <div class="display-section">
