add minor changes to style and markup render

--- a/Fetching quote/index.html
+++ b/Fetching quote/index.html
@@ -12,7 +12,7 @@
         <!-- navigation -->
       <nav class="navigation">
         <ul class="main-navs">
-          <li class="home active" >Home</li>
+          <li class="home" >Home</li>
           <li class="saved-quotes-nav">Saved quote</li>
           <li class="my-quotes">My quotes</li>
         </ul>
